finalize the extension

--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "A VS Code extension to copy functions from JavaScript files",
   "version": "0.0.1",
   "repository": "https://github.com/reemtariqq/copy-cat",
+  "icon": "https://raw.githubusercontent.com/reemtariqq/copy-cat/main/image.webp",
+  "publisher": "ReemT",
   "license": "MIT",
   "engines": {
     "vscode": "^1.60.0"
